# Examen1

./: README.md  makefile
pregunta-3/: BuddySystem  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  coverage.info  runUnitTests
pregunta-3/Testing/Temporary/: CTestCostData.txt
pregunta-3/coverage-report/: index-sort-f.html  index-sort-l.html  index.html
pregunta-3/coverage-report/11/: cmath.func-sort-c.html  cmath.func.html  cmath.gcov.html  index-sort-f.html  index-sort-l.html  index.html  new.func-sort-c.html  new.func.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html
pregunta-3/headers/: BuddySystem.hpp
pregunta-3/src/: BuddySystem.cpp  main.cpp  test.cpp
pregunta-4/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  coverage.info  runUnitTests  vector3D
pregunta-4/Testing/Temporary/: CTestCostData.txt
pregunta-4/coverage-report/: index-sort-f.html  index-sort-l.html  index.html
pregunta-4/coverage-report/gtest/: gtest-assertion-result.h.func-sort-c.html  gtest-assertion-result.h.func.html  gtest-assertion-result.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
pregunta-4/headers/: Vector3D.hpp
pregunta-4/src/: Vector3D.cpp  main.cpp  test.cpp
pregunta-5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DiagramaT  Makefile  cmake_install.cmake  coverage.info  runUnitTests
pregunta-5/Testing/Temporary/: CTestCostData.txt
pregunta-5/coverage-report/: index-sort-f.html  index-sort-l.html  index.html
pregunta-5/coverage-report/headers/: ProgramaBase.hpp.func-sort-c.html  ProgramaBase.hpp.func.html  ProgramaBase.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
pregunta-5/coverage-report/src/: ConexionLenguaje.cpp.func-sort-c.html  ConexionLenguaje.cpp.func.html  ConexionLenguaje.cpp.gcov.html  DiagramaT.cpp.func-sort-c.html  DiagramaT.cpp.func.html  DiagramaT.cpp.gcov.html  Interprete.cpp.func-sort-c.html  Interprete.cpp.func.html  Interprete.cpp.gcov.html  Programa.cpp.func-sort-c.html  Programa.cpp.func.html  Programa.cpp.gcov.html  ProgramaBase.cpp.func-sort-c.html  ProgramaBase.cpp.func.html  ProgramaBase.cpp.gcov.html  Traductor.cpp.func-sort-c.html  Traductor.cpp.func.html  Traductor.cpp.gcov.html  index-sort-f.html  (+5 more)
pregunta-5/headers/: ConexionLenguaje.hpp  DiagramaT.hpp  Interprete.hpp  Programa.hpp  ProgramaBase.hpp  Traductor.hpp
pregunta-5/src/: ConexionLenguaje.cpp  DiagramaT.cpp  Interprete.cpp  Programa.cpp  ProgramaBase.cpp  Traductor.cpp  main.cpp  test.cpp
(+306 files in other folders)
