cmake_minimum_required(VERSION 3.5)
project(buddysystem)
set(CMAKE_CXX_STANDARD 11)
set(SOURCES src/BuddySystem.cpp src/main.cpp)
set(HEADERS "headers/BuddySystem.hpp")
add_executable(BuddySystem ${SOURCES} ${HEADERS})

IF( test AND test STREQUAL "on" )
  set(CMAKE_CXX_FLAGS "--coverage -fprofile-arcs -ftest-coverage")
  message("Testing enabled")
  file(GLOB TEST_SRC_FILES src/BuddySystem.cpp src/test.cpp)
  add_subdirectory("ext/googletest")
  enable_testing()
  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
  add_executable(runUnitTests ${TEST_SRC_FILES})
  target_link_libraries(runUnitTests gtest gtest_main)
  add_test(UnitTests runUnitTests)
ENDIF()